@@ -1,3 +1,12 @@
+2005-10-09  Miguel Sofer <msofer@users.sf.net>
+
+	* generic/tclCmdIL.c:
+
+	* generic/tclInt.h: modified the TclNSVarHashTable definition to
+	not require coordination between tcl.h and tclInt.h
+	* generic/tcl.h: Now unnecessary comment removed
+	
+
 2005-10-08  Miguel Sofer <msofer@users.sf.net>
 
 	* unix/configure:
